# raft-leader-election

./: CMakeLists.txt
include/: protocol.hpp
test/: node_test.cpp
